--- a/app/globals.css
+++ b/app/globals.css
@@ -78,7 +78,7 @@
 @theme inline {
   --font-sans: 'Geist', 'Geist Fallback';
   --font-mono: 'Geist Mono', 'Geist Mono Fallback';
-  --font-rouge: 'Dancing Script', 'cursive';
+  --font-rouge: 'Doto Variable', sans-serif;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
